--- a/register.html
+++ b/register.html
@@ -93,7 +93,7 @@
                     submitButton.disabled = true;
 
                     try {
-                        const backendUrl = 'URL_DE_TU_BACKEND_AQUI';
+                        const backendUrl = 'greenhaul-backend-production.up.railway.app';
                         
                         const response = await fetch(`${backendUrl}/api/register`, {
                             method: 'POST',
