cambio de color de pop up

--- a/register.html
+++ b/register.html
@@ -71,7 +71,8 @@
     <div class="footer-bottom">&copy; <span id="current-year">2025</span> GreenHaul.</div>
   </footer>
 
-  <div class="cart-notification" id="cartNotification"><span id="notificationText"></span></div>
+  .cart-notification span {color: white;}
+  
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
