--- a/register.html
+++ b/register.html
@@ -14,6 +14,7 @@
             .form-control { width: 100%; padding: 12px; border: 1px solid #e0e0e0; border-radius: 8px; font-size: 1rem; }
             .btn.loading { pointer-events: none; position: relative; color: transparent !important; }
             .btn.loading::after { content: ''; position: absolute; top: 50%; left: 50%; width: 20px; height: 20px; margin-top: -10px; margin-left: -10px; border: 3px solid rgba(255,255,255,0.5); border-top-color: white; border-radius: 50%; animation: spin 0.8s linear infinite; }
+            .btn-primary, .btn-primary:hover { color: white;}
             @keyframes spin { to { transform: rotate(360deg); } }
             /* Estilos para el pop-up de notificación */
             .cart-notification { position: fixed; bottom: 30px; left: 50%; transform: translate(-50%, 150%); background-color: #00b386; color: white; padding: 15px 25px; border-radius: 50px; box-shadow: 0 5px 15px rgba(0,0,0,0.2); z-index: 2001; display: flex; align-items: center; gap: 15px; opacity: 0; transition: all 0.4s ease-out; }
