--- a/register.html
+++ b/register.html
@@ -2,21 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crear Cuenta - GreenHaul</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+  <link rel="stylesheet" href="assets/css/styles.css"/>
 
-  <!-- Estilos internos autocontenidos -->
   <style>
-    body {
-      font-family: "Segoe UI", sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-      padding: 0;
-    }
-
     .form-container {
       max-width: 550px;
-      margin: 60px auto;
+      margin: 0 auto;
       background: white;
       padding: 40px;
       border-radius: 12px;
@@ -41,30 +35,14 @@
       font-size: 1rem;
     }
 
-    .btn {
-      padding: 12px;
-      background-color: #2ecc71;
-      color: white;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
-
-    .btn:hover {
-      background-color: #27ae60;
-    }
-
     .btn.loading {
       pointer-events: none;
-      color: transparent !important;
       position: relative;
+      color: transparent !important;
     }
 
     .btn.loading::after {
-      content: "";
+      content: '';
       position: absolute;
       top: 50%;
       left: 50%;
@@ -84,23 +62,25 @@
       }
     }
 
-    /* Nueva notificación flotante */
+    /* Popup personalizado */
     .cart-notification {
       position: fixed;
-      bottom: 30px;
+      bottom: 40px;
       left: 50%;
       transform: translateX(-50%) translateY(100%);
-      background-color: #222;
-      color: white;
-      padding: 18px 30px;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+      background: linear-gradient(135deg, #2d3436, #636e72);
+      color: #fff;
+      padding: 18px 26px;
+      border-radius: 16px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
       display: flex;
       align-items: center;
       gap: 12px;
+      font-size: 16px;
+      font-weight: 500;
       opacity: 0;
       z-index: 9999;
-      transition: all 0.4s ease;
+      transition: all 0.5s ease;
     }
 
     .cart-notification.visible {
@@ -109,132 +89,135 @@
     }
 
     .cart-notification.success {
-      background-color: #27ae60;
+      border-left: 6px solid #00b894;
     }
 
     .cart-notification.error {
-      background-color: #c0392b;
+      border-left: 6px solid #d63031;
     }
 
     .cart-notification .icon {
-      font-size: 20px;
-    }
-
-    footer {
-      margin-top: 100px;
-      padding: 20px;
-      text-align: center;
-      font-size: 14px;
-      color: #777;
+      font-size: 22px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 </head>
 <body>
-  <main>
-    <div class="form-container">
-      <h2 style="text-align: center;">Crea tu Cuenta en GreenHaul</h2>
-      <p style="text-align: center;">Es rápido, fácil y te permitirá gestionar tus pedidos.</p>
+  <header>
+    <nav class="navbar">
+      <div class="container navbar-content">
+        <a href="index.html" class="logo">
+          <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" style="height: 55px;">
+        </a>
+        <ul class="nav-links-list">
+          <li><a href="index.html" class="nav-link">Inicio</a></li>
+          <li><a href="productos.html" class="nav-link">Productos</a></li>
+          <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-      <form id="registerForm">
-        <div class="form-group">
-          <label for="firstName">Nombre(s)</label>
-          <input type="text" id="firstName" class="form-control" required />
+  <main class="page-content">
+    <section class="section">
+      <div class="container">
+        <div class="section-title">
+          <h2>Crea tu Cuenta en GreenHaul</h2>
+          <p>Es rápido, fácil y te permitirá gestionar tus pedidos.</p>
         </div>
-        <div class="form-group">
-          <label for="lastName">Apellidos</label>
-          <input type="text" id="lastName" class="form-control" required />
+        <div class="form-container">
+          <form id="registerForm">
+            <div class="form-group"><label for="firstName">Nombre(s)</label><input type="text" id="firstName" class="form-control" required></div>
+            <div class="form-group"><label for="lastName">Apellidos</label><input type="text" id="lastName" class="form-control" required></div>
+            <div class="form-group"><label for="email">Correo Electrónico</label><input type="email" id="email" class="form-control" required></div>
+            <div class="form-group"><label for="whatsapp">Número de WhatsApp</label><input type="tel" id="whatsapp" class="form-control" placeholder="Ej: 5512345678" required></div>
+            <div class="form-group"><label for="password">Contraseña</label><input type="password" id="password" class="form-control" required></div>
+            <div class="form-group"><label for="confirmPassword">Confirmar Contraseña</label><input type="password" id="confirmPassword" class="form-control" required></div>
+            <button type="submit" class="btn btn-primary" style="width: 100%;">Crear Cuenta</button>
+          </form>
+          <div style="text-align: center; margin-top: 20px;">
+            <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
+          </div>
         </div>
-        <div class="form-group">
-          <label for="email">Correo Electrónico</label>
-          <input type="email" id="email" class="form-control" required />
-        </div>
-        <div class="form-group">
-          <label for="whatsapp">Número de WhatsApp</label>
-          <input type="tel" id="whatsapp" class="form-control" placeholder="Ej: 5512345678" required />
-        </div>
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input type="password" id="password" class="form-control" required />
-        </div>
-        <div class="form-group">
-          <label for="confirmPassword">Confirmar Contraseña</label>
-          <input type="password" id="confirmPassword" class="form-control" required />
-        </div>
-        <button type="submit" class="btn" style="width: 100%;">Crear Cuenta</button>
-      </form>
-
-      <p style="text-align: center; margin-top: 20px;">¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
-    </div>
+      </div>
+    </section>
   </main>
 
+  <footer class="footer"></footer>
+
   <div class="cart-notification" id="cartNotification">
-    <span class="icon" id="notificationIcon"></span>
+    <span class="icon"></span>
     <span id="notificationText"></span>
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      function showNotification(message, type = "success") {
-        const el = document.getElementById("cartNotification");
-        const icon = document.getElementById("notificationIcon");
-        const text = document.getElementById("notificationText");
+    document.addEventListener('DOMContentLoaded', () => {
+      function showNotification(message, type = 'success') {
+        const el = document.getElementById('cartNotification');
+        if (!el) {
+          alert(message);
+          return;
+        }
 
-        if (!el || !icon || !text) return alert(message);
+        const iconSpan = el.querySelector('.icon');
+        iconSpan.innerHTML = type === 'success' ? '✅' : '❌';
 
-        icon.textContent = type === "success" ? "✔️" : "❌";
-        text.textContent = message;
+        const textEl = el.querySelector('#notificationText');
+        textEl.textContent = message;
 
         el.className = `cart-notification ${type} visible`;
 
         setTimeout(() => {
-          el.classList.remove("visible");
+          el.classList.remove('visible');
         }, 4000);
       }
 
-      const registerForm = document.getElementById("registerForm");
+      const registerForm = document.getElementById('registerForm');
       if (registerForm) {
-        registerForm.addEventListener("submit", async (event) => {
+        registerForm.addEventListener('submit', async (event) => {
           event.preventDefault();
 
-          const name = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
-          const email = document.getElementById("email").value;
-          const password = document.getElementById("password").value;
-          const confirmPassword = document.getElementById("confirmPassword").value;
-          const whatsapp = document.getElementById("whatsapp").value;
-          const submitButton = registerForm.querySelector("button[type='submit']");
+          const name = document.getElementById('firstName').value + ' ' + document.getElementById('lastName').value;
+          const email = document.getElementById('email').value;
+          const password = document.getElementById('password').value;
+          const confirmPassword = document.getElementById('confirmPassword').value;
+          const whatsapp = document.getElementById('whatsapp').value;
+          const submitButton = registerForm.querySelector('button[type="submit"]');
 
           if (password !== confirmPassword) {
-            showNotification("Las contraseñas no coinciden.", "error");
+            showNotification('Las contraseñas no coinciden.', 'error');
             return;
           }
 
-          submitButton.classList.add("loading");
+          submitButton.classList.add('loading');
           submitButton.disabled = true;
 
           try {
-            const backendUrl = "https://greenhaul-backend-production.up.railway.app";
+            const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
 
             const response = await fetch(`${backendUrl}/api/register`, {
-              method: "POST",
-              headers: { "Content-Type": "application/json" },
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify({ name, email, password, whatsapp }),
             });
 
             const data = await response.json();
 
             if (response.ok) {
-              showNotification("¡Cuenta creada con éxito! Redirigiendo...", "success");
+              showNotification('¡Cuenta creada con éxito! Redirigiendo...', 'success');
               setTimeout(() => {
-                window.location.href = "login.html";
+                window.location.href = 'login.html';
               }, 2000);
             } else {
-              showNotification(data.message || "Ocurrió un error.", "error");
+              showNotification(data.message || 'Ocurrió un error.', 'error');
             }
           } catch (error) {
-            console.error("Error en fetch:", error);
-            showNotification("No se pudo conectar con el servidor.", "error");
+            console.error('Error en fetch:', error);
+            showNotification('No se pudo conectar con el servidor.', 'error');
           } finally {
-            submitButton.classList.remove("loading");
+            submitButton.classList.remove('loading');
             submitButton.disabled = false;
           }
         });
