--- a/register.html
+++ b/register.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Crear Cuenta - GreenHaul</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
-  <link rel="stylesheet" href="assets/css/styles.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 
   <style>
+    /* === FORMULARIO === */
     .form-container {
       max-width: 550px;
       margin: 0 auto;
@@ -62,45 +63,45 @@
       }
     }
 
-    /* Popup personalizado */
-    .cart-notification {
-      position: fixed;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%) translateY(100%);
-      background: linear-gradient(135deg, #2d3436, #636e72);
-      color: #fff;
-      padding: 18px 26px;
-      border-radius: 16px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      font-size: 16px;
-      font-weight: 500;
-      opacity: 0;
-      z-index: 9999;
-      transition: all 0.5s ease;
+    /* === NOTIFICACIÓN PERSONALIZADA === */
+    body .cart-notification {
+      position: fixed !important;
+      bottom: 40px !important;
+      left: 50% !important;
+      transform: translateX(-50%) translateY(100%) !important;
+      background: linear-gradient(135deg, #2d3436, #636e72) !important;
+      color: #fff !important;
+      padding: 18px 26px !important;
+      border-radius: 16px !important;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3) !important;
+      display: flex !important;
+      align-items: center !important;
+      gap: 12px !important;
+      font-size: 16px !important;
+      font-weight: 500 !important;
+      opacity: 0 !important;
+      z-index: 9999 !important;
+      transition: all 0.5s ease !important;
     }
 
-    .cart-notification.visible {
-      transform: translateX(-50%) translateY(0);
-      opacity: 1;
+    body .cart-notification.visible {
+      transform: translateX(-50%) translateY(0) !important;
+      opacity: 1 !important;
     }
 
-    .cart-notification.success {
-      border-left: 6px solid #00b894;
+    body .cart-notification.success {
+      border-left: 6px solid #00b894 !important;
     }
 
-    .cart-notification.error {
-      border-left: 6px solid #d63031;
+    body .cart-notification.error {
+      border-left: 6px solid #d63031 !important;
     }
 
-    .cart-notification .icon {
-      font-size: 22px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    body .cart-notification .icon {
+      font-size: 22px !important;
+      display: flex !important;
+      align-items: center !important;
+      justify-content: center !important;
     }
   </style>
 </head>
@@ -109,7 +110,7 @@
     <nav class="navbar">
       <div class="container navbar-content">
         <a href="index.html" class="logo">
-          <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" style="height: 55px;">
+          <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" style="height: 55px;" />
         </a>
         <ul class="nav-links-list">
           <li><a href="index.html" class="nav-link">Inicio</a></li>
@@ -129,12 +130,30 @@
         </div>
         <div class="form-container">
           <form id="registerForm">
-            <div class="form-group"><label for="firstName">Nombre(s)</label><input type="text" id="firstName" class="form-control" required></div>
-            <div class="form-group"><label for="lastName">Apellidos</label><input type="text" id="lastName" class="form-control" required></div>
-            <div class="form-group"><label for="email">Correo Electrónico</label><input type="email" id="email" class="form-control" required></div>
-            <div class="form-group"><label for="whatsapp">Número de WhatsApp</label><input type="tel" id="whatsapp" class="form-control" placeholder="Ej: 5512345678" required></div>
-            <div class="form-group"><label for="password">Contraseña</label><input type="password" id="password" class="form-control" required></div>
-            <div class="form-group"><label for="confirmPassword">Confirmar Contraseña</label><input type="password" id="confirmPassword" class="form-control" required></div>
+            <div class="form-group">
+              <label for="firstName">Nombre(s)</label>
+              <input type="text" id="firstName" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label for="lastName">Apellidos</label>
+              <input type="text" id="lastName" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label for="email">Correo Electrónico</label>
+              <input type="email" id="email" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label for="whatsapp">Número de WhatsApp</label>
+              <input type="tel" id="whatsapp" class="form-control" placeholder="Ej: 5512345678" required />
+            </div>
+            <div class="form-group">
+              <label for="password">Contraseña</label>
+              <input type="password" id="password" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label for="confirmPassword">Confirmar Contraseña</label>
+              <input type="password" id="confirmPassword" class="form-control" required />
+            </div>
             <button type="submit" class="btn btn-primary" style="width: 100%;">Crear Cuenta</button>
           </form>
           <div style="text-align: center; margin-top: 20px;">
@@ -147,6 +166,7 @@
 
   <footer class="footer"></footer>
 
+  <!-- POPUP DE NOTIFICACIÓN -->
   <div class="cart-notification" id="cartNotification">
     <span class="icon"></span>
     <span id="notificationText"></span>
@@ -179,7 +199,10 @@
         registerForm.addEventListener('submit', async (event) => {
           event.preventDefault();
 
-          const name = document.getElementById('firstName').value + ' ' + document.getElementById('lastName').value;
+          const name =
+            document.getElementById('firstName').value +
+            ' ' +
+            document.getElementById('lastName').value;
           const email = document.getElementById('email').value;
           const password = document.getElementById('password').value;
           const confirmPassword = document.getElementById('confirmPassword').value;
@@ -200,7 +223,7 @@
             const response = await fetch(`${backendUrl}/api/register`, {
               method: 'POST',
               headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ name, email, password, whatsapp }),
+              body: JSON.stringify({ name, email, password, whatsapp })
             });
 
             const data = await response.json();
