--- a/register.html
+++ b/register.html
@@ -164,7 +164,7 @@
     </section>
   </main>
 
-  <footer class="footer"></footer>
+  <!-- Footer eliminado para pruebas -->
 
   <!-- POPUP DE NOTIFICACIÓN -->
   <div class="cart-notification" id="cartNotification">
