--- a/register.html
+++ b/register.html
@@ -8,10 +8,16 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
 
   <style>
-    /* === FORMULARIO === */
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+
     .form-container {
       max-width: 550px;
-      margin: 0 auto;
+      margin: 60px auto;
       background: white;
       padding: 40px;
       border-radius: 12px;
@@ -36,14 +42,30 @@
       font-size: 1rem;
     }
 
+    .btn {
+      padding: 12px;
+      background-color: #2ecc71;
+      color: white;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    .btn:hover {
+      background-color: #27ae60;
+    }
+
     .btn.loading {
       pointer-events: none;
-      position: relative;
       color: transparent !important;
+      position: relative;
     }
 
     .btn.loading::after {
-      content: '';
+      content: "";
       position: absolute;
       top: 50%;
       left: 50%;
@@ -63,49 +85,45 @@
       }
     }
 
-    /* === NOTIFICACIÓN PERSONALIZADA === */
-    body .cart-notification {
-      position: fixed !important;
-      bottom: 40px !important;
-      left: 50% !important;
-      transform: translateX(-50%) translateY(100%) !important;
-      background: linear-gradient(135deg, #2d3436, #636e72) !important;
-      color: #fff !important;
-      padding: 18px 26px !important;
-      border-radius: 16px !important;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3) !important;
-      display: flex !important;
-      align-items: center !important;
-      gap: 12px !important;
-      font-size: 16px !important;
-      font-weight: 500 !important;
-      opacity: 0 !important;
-      z-index: 9999 !important;
-      transition: all 0.5s ease !important;
+    /* Notificación flotante moderna */
+    .cart-notification {
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%) translateY(100%);
+      background-color: #222;
+      color: white;
+      padding: 18px 30px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      opacity: 0;
+      z-index: 9999;
+      transition: all 0.4s ease;
     }
 
-    body .cart-notification.visible {
-      transform: translateX(-50%) translateY(0) !important;
-      opacity: 1 !important;
+    .cart-notification.visible {
+      transform: translateX(-50%) translateY(0);
+      opacity: 1;
     }
 
-    body .cart-notification.success {
-      border-left: 6px solid #00b894 !important;
+    .cart-notification.success {
+      background-color: #27ae60;
     }
 
-    body .cart-notification.error {
-      border-left: 6px solid #d63031 !important;
+    .cart-notification.error {
+      background-color: #c0392b;
     }
 
-    body .cart-notification .icon {
-      font-size: 22px !important;
-      display: flex !important;
-      align-items: center !important;
-      justify-content: center !important;
+    .cart-notification .icon {
+      font-size: 20px;
     }
   </style>
 </head>
 <body>
+
   <header>
     <nav class="navbar">
       <div class="container navbar-content">
@@ -122,125 +140,111 @@
   </header>
 
   <main class="page-content">
-    <section class="section">
-      <div class="container">
-        <div class="section-title">
-          <h2>Crea tu Cuenta en GreenHaul</h2>
-          <p>Es rápido, fácil y te permitirá gestionar tus pedidos.</p>
+    <div class="form-container">
+      <h2 style="text-align: center;">Crea tu Cuenta en GreenHaul</h2>
+      <p style="text-align: center;">Es rápido, fácil y te permitirá gestionar tus pedidos.</p>
+
+      <form id="registerForm">
+        <div class="form-group">
+          <label for="firstName">Nombre(s)</label>
+          <input type="text" id="firstName" class="form-control" required />
         </div>
-        <div class="form-container">
-          <form id="registerForm">
-            <div class="form-group">
-              <label for="firstName">Nombre(s)</label>
-              <input type="text" id="firstName" class="form-control" required />
-            </div>
-            <div class="form-group">
-              <label for="lastName">Apellidos</label>
-              <input type="text" id="lastName" class="form-control" required />
-            </div>
-            <div class="form-group">
-              <label for="email">Correo Electrónico</label>
-              <input type="email" id="email" class="form-control" required />
-            </div>
-            <div class="form-group">
-              <label for="whatsapp">Número de WhatsApp</label>
-              <input type="tel" id="whatsapp" class="form-control" placeholder="Ej: 5512345678" required />
-            </div>
-            <div class="form-group">
-              <label for="password">Contraseña</label>
-              <input type="password" id="password" class="form-control" required />
-            </div>
-            <div class="form-group">
-              <label for="confirmPassword">Confirmar Contraseña</label>
-              <input type="password" id="confirmPassword" class="form-control" required />
-            </div>
-            <button type="submit" class="btn btn-primary" style="width: 100%;">Crear Cuenta</button>
-          </form>
-          <div style="text-align: center; margin-top: 20px;">
-            <p>¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
-          </div>
+        <div class="form-group">
+          <label for="lastName">Apellidos</label>
+          <input type="text" id="lastName" class="form-control" required />
         </div>
-      </div>
-    </section>
+        <div class="form-group">
+          <label for="email">Correo Electrónico</label>
+          <input type="email" id="email" class="form-control" required />
+        </div>
+        <div class="form-group">
+          <label for="whatsapp">Número de WhatsApp</label>
+          <input type="tel" id="whatsapp" class="form-control" placeholder="Ej: 5512345678" required />
+        </div>
+        <div class="form-group">
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" class="form-control" required />
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Confirmar Contraseña</label>
+          <input type="password" id="confirmPassword" class="form-control" required />
+        </div>
+        <button type="submit" class="btn" style="width: 100%;">Crear Cuenta</button>
+      </form>
+
+      <p style="text-align: center; margin-top: 20px;">¿Ya tienes una cuenta? <a href="login.html">Inicia sesión aquí</a></p>
+    </div>
   </main>
 
-  <!-- Footer eliminado para pruebas -->
-
-  <!-- POPUP DE NOTIFICACIÓN -->
+  <!-- POPUP -->
   <div class="cart-notification" id="cartNotification">
-    <span class="icon"></span>
+    <span class="icon" id="notificationIcon"></span>
     <span id="notificationText"></span>
   </div>
 
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      function showNotification(message, type = 'success') {
-        const el = document.getElementById('cartNotification');
-        if (!el) {
-          alert(message);
-          return;
-        }
+    document.addEventListener("DOMContentLoaded", () => {
+      function showNotification(message, type = "success") {
+        const el = document.getElementById("cartNotification");
+        const icon = document.getElementById("notificationIcon");
+        const text = document.getElementById("notificationText");
 
-        const iconSpan = el.querySelector('.icon');
-        iconSpan.innerHTML = type === 'success' ? '✅' : '❌';
+        if (!el || !icon || !text) return alert(message);
 
-        const textEl = el.querySelector('#notificationText');
-        textEl.textContent = message;
+        icon.textContent = type === "success" ? "✔️" : "❌";
+        text.textContent = message;
 
         el.className = `cart-notification ${type} visible`;
 
         setTimeout(() => {
-          el.classList.remove('visible');
+          el.classList.remove("visible");
         }, 4000);
       }
 
-      const registerForm = document.getElementById('registerForm');
+      const registerForm = document.getElementById("registerForm");
       if (registerForm) {
-        registerForm.addEventListener('submit', async (event) => {
+        registerForm.addEventListener("submit", async (event) => {
           event.preventDefault();
 
-          const name =
-            document.getElementById('firstName').value +
-            ' ' +
-            document.getElementById('lastName').value;
-          const email = document.getElementById('email').value;
-          const password = document.getElementById('password').value;
-          const confirmPassword = document.getElementById('confirmPassword').value;
-          const whatsapp = document.getElementById('whatsapp').value;
-          const submitButton = registerForm.querySelector('button[type="submit"]');
+          const name = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
+          const email = document.getElementById("email").value;
+          const password = document.getElementById("password").value;
+          const confirmPassword = document.getElementById("confirmPassword").value;
+          const whatsapp = document.getElementById("whatsapp").value;
+          const submitButton = registerForm.querySelector("button[type='submit']");
 
           if (password !== confirmPassword) {
-            showNotification('Las contraseñas no coinciden.', 'error');
+            showNotification("Las contraseñas no coinciden.", "error");
             return;
           }
 
-          submitButton.classList.add('loading');
+          submitButton.classList.add("loading");
           submitButton.disabled = true;
 
           try {
-            const backendUrl = 'https://greenhaul-backend-production.up.railway.app';
+            const backendUrl = "https://greenhaul-backend-production.up.railway.app";
 
             const response = await fetch(`${backendUrl}/api/register`, {
-              method: 'POST',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({ name, email, password, whatsapp })
+              method: "POST",
+              headers: { "Content-Type": "application/json" },
+              body: JSON.stringify({ name, email, password, whatsapp }),
             });
 
             const data = await response.json();
 
             if (response.ok) {
-              showNotification('¡Cuenta creada con éxito! Redirigiendo...', 'success');
+              showNotification("¡Cuenta creada con éxito! Redirigiendo...", "success");
               setTimeout(() => {
-                window.location.href = 'login.html';
+                window.location.href = "login.html";
               }, 2000);
             } else {
-              showNotification(data.message || 'Ocurrió un error.', 'error');
+              showNotification(data.message || "Ocurrió un error.", "error");
             }
           } catch (error) {
-            console.error('Error en fetch:', error);
-            showNotification('No se pudo conectar con el servidor.', 'error');
+            console.error("Error en fetch:", error);
+            showNotification("No se pudo conectar con el servidor.", "error");
           } finally {
-            submitButton.classList.remove('loading');
+            submitButton.classList.remove("loading");
             submitButton.disabled = false;
           }
         });
