--- a/register.html
+++ b/register.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Crear Cuenta - GreenHaul</title>
 
-  <!-- Estilos internos autocontenidos -->
   <style>
     body {
       font-family: "Segoe UI", sans-serif;
@@ -43,7 +42,7 @@
 
     .btn {
       padding: 12px;
-      background-color: #2ecc71;
+      background: linear-gradient(135deg, #00b894, #0984e3);
       color: white;
       font-weight: bold;
       border: none;
@@ -54,7 +53,7 @@
     }
 
     .btn:hover {
-      background-color: #27ae60;
+      background: linear-gradient(135deg, #00cec9, #74b9ff);
     }
 
     .btn.loading {
@@ -84,17 +83,17 @@
       }
     }
 
-    /* Nueva notificación flotante */
+    /* Popup con estilo GreenHaul */
     .cart-notification {
       position: fixed;
       bottom: 30px;
       left: 50%;
       transform: translateX(-50%) translateY(100%);
-      background-color: #222;
+      background: linear-gradient(135deg, #2d3436, #00cec9);
       color: white;
       padding: 18px 30px;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+      border-radius: 16px;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
       display: flex;
       align-items: center;
       gap: 12px;
@@ -109,23 +108,15 @@
     }
 
     .cart-notification.success {
-      background-color: #27ae60;
+      border-left: 6px solid #00b894;
     }
 
     .cart-notification.error {
-      background-color: #c0392b;
+      border-left: 6px solid #d63031;
     }
 
     .cart-notification .icon {
       font-size: 20px;
-    }
-
-    footer {
-      margin-top: 100px;
-      padding: 20px;
-      text-align: center;
-      font-size: 14px;
-      color: #777;
     }
   </style>
 </head>
@@ -167,6 +158,7 @@
     </div>
   </main>
 
+  <!-- POPUP -->
   <div class="cart-notification" id="cartNotification">
     <span class="icon" id="notificationIcon"></span>
     <span id="notificationText"></span>
