--- a/login.html
+++ b/login.html
@@ -66,7 +66,10 @@
     <footer class="footer">
         </footer>
     
-    <div class="cart-notification" id="cartNotification"><p id="notificationText"></p></div>
+        <div class="cart-notification" id="cartNotification">
+            <span class="icon" id="notificationIcon"></span>
+            <span id="notificationText"></span>
+        </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
