--- a/login.html
+++ b/login.html
@@ -7,19 +7,43 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <style>
-        /* Estilos específicos para esta página */
+        /* Estilos para el formulario */
         .form-container { max-width: 500px; margin: 100px auto; background: white; padding: 40px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.08); }
         .form-group { margin-bottom: 20px; }
         .form-group label { display: block; margin-bottom: 8px; font-weight: 600; }
         .form-control { width: 100%; padding: 12px; border: 1px solid #e0e0e0; border-radius: 8px; font-size: 1rem; }
         .btn.loading::after { content: ''; position: absolute; top: 50%; left: 50%; width: 20px; height: 20px; margin-top: -10px; margin-left: -10px; border: 3px solid rgba(255,255,255,0.5); border-top-color: white; border-radius: 50%; animation: spin 0.8s linear infinite; }
         @keyframes spin { to { transform: rotate(360deg); } }
-        /* POPUP ESTILO DEFINIDO (COMO EN REGISTER.HTML) */
-        .cart-notification { position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%) translateY(100%); background-color: #222; color: #ffffff; padding: 18px 30px; border-radius: 16px; box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3); display: flex; align-items: center; gap: 12px; opacity: 0; z-index: 9999; transition: all 0.4s ease; font-weight: bold; }
-        .cart-notification.visible { transform: translateX(-50%) translateY(0); opacity: 1; }
-        .cart-notification.success { background-color: #00b894; }
-        .cart-notification.error { background-color: #d63031; }
-        .cart-notification .icon { font-size: 20px; }
+
+        /* ===== NUEVOS ESTILOS PARA EL POP-UP SUPERIOR DERECHO ===== */
+        .toast-notification {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #2ecc71; /* Verde por defecto */
+            color: white;
+            padding: 15px 25px;
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            z-index: 9999;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            font-weight: 500;
+            opacity: 0;
+            transform: translateX(100%);
+            transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
+        }
+        .toast-notification.error {
+            background-color: #e74c3c; /* Rojo para errores */
+        }
+        .toast-notification.show {
+            opacity: 1;
+            transform: translateX(0);
+        }
+        .toast-notification .icon {
+            font-size: 1.2rem;
+        }
     </style>
 </head>
 <body>
@@ -45,27 +69,28 @@
     <footer class="footer">
         </footer>
     
-    <div class="cart-notification" id="cartNotification">
+    <div class="toast-notification" id="loginNotification">
         <span class="icon" id="notificationIcon"></span>
         <span id="notificationText"></span>
     </div>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            function showNotification(message, type = "success") {
-                const el = document.getElementById("cartNotification");
+            function showToastNotification(message, type = "success") {
+                const el = document.getElementById("loginNotification");
                 const icon = document.getElementById("notificationIcon");
                 const text = document.getElementById("notificationText");
 
                 if (!el || !icon || !text) return alert(message);
 
-                icon.textContent = type === "success" ? "✔️" : "❌";
+                icon.innerHTML = type === "success" ? '<i class="fas fa-check-circle"></i>' : '<i class="fas fa-times-circle"></i>';
                 text.textContent = message;
-
-                el.className = `cart-notification ${type} visible`;
+                
+                el.className = `toast-notification ${type}`; // Limpia clases viejas
+                el.classList.add("show");
 
                 setTimeout(() => {
-                    el.classList.remove("visible");
+                    el.classList.remove("show");
                 }, 4000);
             }
 
@@ -94,15 +119,15 @@
 
                         if (response.ok) {
                             localStorage.setItem('greenhaulUser', JSON.stringify(data.user));
-                            showNotification('¡Bienvenido de nuevo!', 'success');
+                            showToastNotification('Identidad verificada con éxito', 'success');
                             setTimeout(() => {
                                 window.location.href = 'cuenta.html';
                             }, 1500);
                         } else {
-                            showNotification(data.message, 'error');
+                            showToastNotification('Contraseña y/o correo incorrecto', 'error');
                         }
                     } catch (error) {
-                        showNotification('Error al conectar con el servidor.', 'error');
+                        showToastNotification('Error al conectar con el servidor.', 'error');
                     } finally {
                         submitButton.classList.remove('loading');
                         submitButton.disabled = false;
