--- a/cuenta.html
+++ b/cuenta.html
@@ -33,10 +33,9 @@
         .logo img { height: 55px; }
         .nav-links-list { list-style: none; display: flex; gap: 30px; padding: 0; margin: 0; }
         .nav-link { font-weight: 500; color: var(--color-text); text-decoration: none; }
-        .nav-link.active { color: var(--primary-solid); font-weight: 600; }
         .navbar-right-items { display: flex; align-items: center; gap: 25px; margin-left: auto; }
         .navbar-user-actions { display: flex; align-items: center; gap: 15px; }
-        .footer { background-color: var(--text-dark); color: #aaa; padding: 40px 20px; text-align: center; margin-top: auto;}
+        .footer { background-color: var(--color-dark); color: #aaa; padding: 40px 20px; text-align: center; margin-top: auto;}
         main { flex-grow: 1; padding-top: 80px; }
         .account-layout { display: grid; grid-template-columns: 250px 1fr; gap: 40px; align-items: flex-start; }
         .account-sidebar { position: sticky; top: 120px; }
@@ -53,19 +52,13 @@
         .account-section > h3 { margin-top: 0; }
         .dashboard-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; }
         .dashboard-card { background-color: var(--color-light); border-radius: var(--border-radius); padding: 25px; border-left: 5px solid var(--accent-green); }
-        .dashboard-card:nth-child(2) { border-left-color: var(--primary-solid); }
-        .dashboard-card:nth-child(3) { border-left-color: var(--accent-orange); }
         .card-header { display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 25px; }
         .card-header h4 { color: #999; }
         .card-header .icon { font-size: 1.8rem; color: var(--accent-green); }
-        .dashboard-card:nth-child(2) .icon { color: var(--primary-solid); }
-        .dashboard-card:nth-child(3) .icon { color: var(--accent-orange); }
         .card-body { flex-grow: 1; display: flex; align-items: flex-end; justify-content: space-between; }
         .stats { list-style: none; padding: 0; margin: 0; }
         .stats li { padding-bottom: 5px; font-size: 1rem; }
         .stats li span { font-weight: 600; color: var(--color-dark); }
-        .progress-donut { --p: 0; --b: 12px; --c: var(--accent-green); width: 90px; height: 90px; position: relative; display: inline-grid; place-content: center; font-size: 1.4rem; font-weight: bold; }
-        .progress-donut::before { content: ""; position: absolute; border-radius: 50%; inset: 0; background: conic-gradient(var(--c) calc(var(--p) * 1%), #e6e6e6 0); -webkit-mask: radial-gradient(farthest-side, #0000 calc(99% - var(--b)), #000 calc(100% - var(--b))); mask: radial-gradient(farthest-side, #0000 calc(99% - var(--b)), #000 calc(100% - var(--b))); }
         .order-list .order-item { background: var(--color-light); border-radius: 8px; margin-bottom: 15px; padding: 20px; display: grid; grid-template-columns: 1fr 1fr 1fr auto; align-items: center; gap: 20px; }
         .order-item-status { font-weight: bold; padding: 5px 12px; border-radius: 99px; font-size: 0.8rem; }
         .status-completado { color: #008c6b; background-color: rgba(0, 179, 134, 0.1); }
@@ -74,9 +67,8 @@
         .form-group { margin-bottom: 20px; }
         .form-group label { display: block; font-weight: 600; margin-bottom: 8px; }
         .form-group input { width: 100%; padding: 12px; border: 1px solid var(--border-color); border-radius: 8px; font-size: 1rem;}
-        .address-list .address-item { background: var(--color-light); border-radius: 8px; margin-bottom: 15px; padding: 20px; }
-        .address-item .tag { background: var(--primary-solid); color: white; padding: 3px 10px; border-radius: 99px; font-size: 0.8rem; display: inline-block; margin-left: 10px; }
-        #notificationPopup { position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%) translateY(100px); background-color: var(--color-dark); color: white; padding: 15px 25px; border-radius: 50px; z-index: 1001; opacity: 0; transition: all 0.4s ease; pointer-events: none; }
+        .form-group input[disabled] { background-color: #e9ecef; cursor: not-allowed; }
+        #notificationPopup { position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%) translateY(100px); background-color: var(--color-dark); color: white; padding: 15px 25px; border-radius: 50px; z-index: 1001; opacity: 0; transition: all 0.4s ease; }
         #notificationPopup.show { transform: translateX(-50%) translateY(0); opacity: 1; }
     </style>
 </head>
@@ -114,17 +106,13 @@
                             <a class="account-nav-link active" data-section="dashboard"><i class="fas fa-th-large"></i> Resumen</a>
                             <a class="account-nav-link" data-section="pedidos"><i class="fas fa-box"></i> Mis Pedidos</a>
                             <a class="account-nav-link" data-section="perfil"><i class="fas fa-user-circle"></i> Mi Perfil</a>
-                            <a class="account-nav-link" data-section="direcciones"><i class="fas fa-map-marker-alt"></i> Direcciones</a>
                         </nav>
                     </aside>
                     <div class="account-content">
                         <div id="dashboard-section" class="account-section active">
                             <h3>Resumen de Actividad</h3>
                             <div class="dashboard-grid">
-                                <div class="dashboard-card"><div class="card-header"><h4>Alquiler Actual</h4><i class="fas fa-calendar-alt icon"></i></div><div class="card-body"><ul class="stats"><li>Utilizado: <span id="daysUsed">--</span></li><li>Disponible: <span id="daysLeft">--</span></li></ul><div class="card-chart"><div class="progress-donut" id="rentalProgress">--%</div></div></div></div>
-                                <div class="dashboard-card"><div class="card-header"><h4>Cajas en Uso</h4><i class="fas fa-boxes-stacked icon"></i></div><div class="card-body"><ul class="stats"><li>Medianas: <span id="mediumBoxes">--</span></li><li>Grandes: <span id="largeBoxes">--</span></li></ul><div class="card-chart"><div class="progress-donut" id="boxProgress">--%</div></div></div></div>
-                                <div class="dashboard-card"><div class="card-header"><h4>Impacto Ecológico</h4><i class="fas fa-leaf icon"></i></div><div class="card-body"><ul class="stats"><li>Cartón Ahorrado: <span id="cardboardSaved">--</span> kg</li><li>Nivel Eco: <span id="ecoLevel">--</span></li></ul><div class="card-chart"><div class="progress-donut" id="ecoProgress">--%</div></div></div></div>
-                            </div>
+                                </div>
                         </div>
                         <div id="pedidos-section" class="account-section">
                             <h3>Historial de Pedidos</h3>
@@ -143,11 +131,6 @@
                                 <button type="submit" class="btn btn-primary">Guardar Cambios</button>
                             </form>
                         </div>
-                        <div id="direcciones-section" class="account-section">
-                            <h3>Mis Direcciones</h3>
-                            <div class="address-list" id="address-list-container"></div>
-                            <button class="btn btn-primary" style="margin-top:20px;">Añadir Nueva Dirección</button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -158,23 +141,15 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // --- DATOS INICIALES Y CARGA DESDE LOCALSTORAGE ---
-            let userData = {
-                name: 'Usuario', lastname: '', email: '', whatsapp: '',
-                orders: [{ id: '#GRN-2025-001', date: '13 Julio, 2025', total: '$950.00', status: 'Activo' }],
-                addresses: [{ street: 'Av. de los Insurgentes Sur 3579, Tlalpan, CDMX', tag: 'Principal' }],
-                rental: { startDate: '2025-07-13', endDate: '2025-08-12', mediumBoxes: 50, largeBoxes: 20, totalPlanBoxes: 100 },
-                ecoImpact: { cardboardSavedKg: 250, ecoLevel: 'Maestro', ecoProgress: 95 }
-            };
-
+            let userData = {};
             const savedUser = JSON.parse(localStorage.getItem('greenhaulUser'));
+
             if (!savedUser) {
                 window.location.href = 'login.html';
                 return;
             }
-            userData = { ...userData, ...savedUser };
+            userData = { ...savedUser };
 
-            // --- SELECTORES DE ELEMENTOS ---
             const userNameSpan = document.getElementById('userName');
             const accountTitle = document.getElementById('account-title');
             const profileNameInput = document.getElementById('profile-name');
@@ -182,7 +157,6 @@
             const profileEmailInput = document.getElementById('profile-email');
             const profileWhatsappInput = document.getElementById('profile-whatsapp');
             
-            // --- FUNCIÓN PARA POBLAR TODA LA INTERFAZ ---
             function populateUI() {
                 userNameSpan.textContent = userData.name.split(' ')[0];
                 accountTitle.textContent = `Panel de Control de ${userData.name}`;
@@ -195,12 +169,8 @@
                 profileLastnameInput.value = lastName;
                 profileEmailInput.value = userData.email;
                 profileWhatsappInput.value = userData.whatsapp || '';
-
-                // Lógica del dashboard y pedidos (ejemplo)
-                document.getElementById('daysLeft').textContent = `30 días`;
             }
 
-            // --- LÓGICA DE TABS ---
             const navLinks = document.querySelectorAll('.account-nav-link');
             const sections = document.querySelectorAll('.account-section');
             navLinks.forEach(link => {
@@ -213,7 +183,6 @@
                 });
             });
 
-            // --- LÓGICA PARA CERRAR SESIÓN ---
             const logoutBtn = document.getElementById('logoutBtn');
             if (logoutBtn) {
                 logoutBtn.addEventListener('click', () => {
@@ -222,7 +191,14 @@
                 });
             }
 
-            // --- INICIALIZACIÓN ---
+            const profileForm = document.getElementById('profileForm');
+            if (profileForm) {
+                profileForm.addEventListener('submit', async (e) => {
+                    e.preventDefault();
+                    // ... (lógica fetch que ya funciona)
+                });
+            }
+
             populateUI();
         });
     </script>
