--- a/cuenta.html
+++ b/cuenta.html
@@ -70,6 +70,7 @@
         .form-group input[disabled] { background-color: #e9ecef; cursor: not-allowed; }
         #notificationPopup { position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%) translateY(100px); background-color: var(--color-dark); color: white; padding: 15px 25px; border-radius: 50px; z-index: 1001; opacity: 0; transition: all 0.4s ease; }
         #notificationPopup.show { transform: translateX(-50%) translateY(0); opacity: 1; }
+        .notification-error { background-color: var(--accent-red) !important; }
     </style>
 </head>
 <body>
