--- a/cuenta.html
+++ b/cuenta.html
@@ -112,8 +112,9 @@
                 <div class="account-content">
                     <div id="dashboard-section" class="account-section active">
                         <h3>Resumen de Actividad</h3>
-                        <div class="dashboard-grid" id="dashboard-data"></div>
-                    </div>
+                        <div class="dashboard-grid">
+                            </div>
+                    </div>                   
 
                     <div id="pedidos-section" class="account-section">
                         <h3>Historial de Pedidos</h3>
