--- a/cuenta.html
+++ b/cuenta.html
@@ -112,9 +112,10 @@
                 <div class="account-content">
                     <div id="dashboard-section" class="account-section active">
                         <h3>Resumen de Actividad</h3>
-                        <div class="dashboard-grid">
-                            </div>
-                    </div>                   
+                        <div class="dashboard-grid" id="dashboard-cards">
+                            <!-- Las tarjetas se insertarán dinámicamente aquí -->
+                        </div>
+                    </div>                                       
 
                     <div id="pedidos-section" class="account-section">
                         <h3>Historial de Pedidos</h3>
